[GTK] Fix hitting hasClass() assertion in debug with the new JS media controls https://bugs.webkit.org/show_bug.cgi?id=128820

Reviewed by Martin Robinson.

The code introduced at r164024 caused the hit of hasClass()
assertion when getting the classNames() of an element with no
class. Now we check for it to avoid the assertion.

No new tests, current set detects the crash in many tests.

* platform/gtk/RenderThemeGtk.cpp:
(WebCore::nodeHasClass): Check for hasClass() in order not to hit
the assertion when getting the classNames() in debug mode.


Canonical link: https://commits.webkit.org/146999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164277 268f45cc-cd09-0410-ab3c-d52691b4dbfc